render_tests/ui/fail/unclosed-tag-complex.stderr
error: expected one of `)`, `,`, `.`, `?`, or an operator, found `compile_error`
  --> $DIR/unclosed-tag-complex.rs:12:9
   |
11 |         </ul>
   |             -
   |             |
   |             expected one of `)`, `,`, `.`, `?`, or an operator
   |             help: missing `,`
12 |       </div>
   |         ^^^ unexpected token

error: Expected closing tag for: <li>
  --> $DIR/unclosed-tag-complex.rs:11:11
   |
11 |         </ul>
   |           ^^

error: Expected closing tag for: <ul>
  --> $DIR/unclosed-tag-complex.rs:12:9
   |
12 |       </div>
   |         ^^^

error[E0061]: this function takes 1 argument but 2 arguments were supplied
  --> $DIR/unclosed-tag-complex.rs:4:5
   |
4  | /     html! {
5  | |       <div>
6  | |         <h1>{"A list"}</h1>
7  | |         <hr />
...  |
11 | |         </ul>
   | |           --
12 | |       </div>
   | |         --- supplied 2 arguments
13 | |     };
   | |______^ expected 1 argument
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
